oqct-app/main/default/objects/DC_Configuration__c/fields/Overall_Failure_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Overall_Failure_Deletion__c</fullName>
    <description>The total number of records of the master object and related objects which are failed in deletion operation</description>
    <formula>Total_Master_Failure_Deletion__c +  Total_Related_Failure_Deletion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of records of the master object and related objects which are failed in deletion operation</inlineHelpText>
    <label>Overall Failure (Deletion)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>