oqct-app/main/default/objects/DC_Configuration__c/fields/Overall_Rollback_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rollback_Status__c</fullName>
    <description>The rollback status of the master object&apos;s record and  related object’s records combined</description>
    <formula>IF(
    !OR(
        CONTAINS(TEXT(Data_Clean_Action__c), &apos;Rollback&apos;),
        CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;)
    ),
    &apos;Not Eligible&apos;,
    IF(
        Total_Rollback_Completed_Data_Clean__c != Total_Data_Cleans__c,
        &apos;Pending&apos;,
        IF(
            AND(Overall_Success_Rollback__c &gt; 0, Overall_Failure_Rollback__c = 0),
            &apos;Success&apos;,
            IF(
                AND(Overall_Success_Rollback__c = 0, Overall_Failure_Rollback__c &gt; 0),
                &apos;Failed&apos;,
                IF(
                    AND(Overall_Success_Rollback__c &gt; 0, Overall_Failure_Rollback__c &gt; 0),
                    &apos;Partial Success&apos;,
                    IF(
                        AND(Overall_Success_Rollback__c = 0, Overall_Failure_Rollback__c = 0),
                        &apos;No Records Found&apos;,
                        null
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The rollback status of the master object&apos;s record and  related object’s records combined</inlineHelpText>
    <label>Overall Rollback Status</label>
    <type>Text</type>
</CustomField>