oqct-app/main/default/objects/DC_Configuration__c/fields/Overall_Success_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Overall_Success_Deletion__c</fullName>
    <description>The total number of records of the master object and related objects which are succeeded in deletion operation</description>
    <formula>Total_Master_Success_Deletion__c +  Total_Related_Success_Deletion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The total number of records of the master object and related objects which are succeeded in deletion operation</inlineHelpText>
    <label>Overall Success (Deletion)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>