oqct-app/main/default/objects/DC_Configuration__c/fields/Post_Masking_Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Masking_Deletion_Date__c</fullName>
    <description>The post masking deletion process date in layman text</description>
    <formula>CASE(
    TEXT(Data_Clean_Action__c),
    &apos;Masking + Deletion&apos;, Process2_Date__c,
    &apos;Masking + Rollback + Deletion&apos;, Process2_Date__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The post masking deletion process date in layman text</inlineHelpText>
    <label>Post Masking Deletion Date</label>
    <type>Text</type>
</CustomField>