oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Date__c.field-meta.xml
<CustomField>
    <fullName>Process2_Date__c</fullName>
    <description>The second process date in layman text</description>
    <formula>&apos;After &apos; +  TEXT(Process2_Start_After__c) + &apos; &apos; + TEXT(Process2_Start_Unit__c) + &apos; (at &apos; +  LEFT(TEXT(Process2_Start_Unit__c), 5) + &apos;) of Masking Completion&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The second process date in layman text</inlineHelpText>
    <label>Process2 Date</label>
    <type>Text</type>
</CustomField>