oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Process2_Job_Id__c</fullName>
    <description>The id of the scheduled job (can be reoccurring) associated with the configuration for the second process</description>
    <inlineHelpText>The id of the scheduled job (can be reoccurring) associated with the configuration for the second process</inlineHelpText>
    <label>Process2 Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>