oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Job_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Process2_Job_Submit_Date__c</fullName>
    <description>The date-time at which the job was submitted initially on first process batch completion</description>
    <inlineHelpText>The date-time at which the job was submitted initially on first process batch completion</inlineHelpText>
    <label>Process2 Job Submit Date</label>
    <type>DateTime</type>
</CustomField>