oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Scheduled_DateTime_Init__c.field-meta.xml
<CustomField>
    <fullName>Process2_Scheduled_DateTime_Init__c</fullName>
    <description>The date time scheduled for initial second process of the old successfully processed records of master object.</description>
    <inlineHelpText>The date time scheduled for initial second process of the old successfully processed records of master object.</inlineHelpText>
    <label>Process2 Scheduled DateTime(Init)</label>
    <type>DateTime</type>
</CustomField>