oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Scheduled_DateTime_Next__c.field-meta.xml
<CustomField>
    <fullName>Process2_Scheduled_DateTime_Next__c</fullName>
    <description>The date time scheduled for second process of the old successfully processed records of master object</description>
    <inlineHelpText>The date time scheduled for second process of the old successfully processed records of master object</inlineHelpText>
    <label>Process2 Scheduled DateTime(Next)</label>
    <type>DateTime</type>
</CustomField>