oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Start_After__c.field-meta.xml
<CustomField>
    <fullName>Process2_Start_After__c</fullName>
    <description>The span after which the old successfully processed records of master object will be scheduled for second processing. Available in Action &apos;Masking + Deletion&apos; or &apos;Archive + Deletion&apos;</description>
    <inlineHelpText>The span after which the old successfully processed records of master object will be scheduled for second processing. Available in Action &apos;Masking + Deletion&apos; or &apos;Archive + Deletion&apos;</inlineHelpText>
    <label>Process2 Start After</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>