oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Process2_Start_Time__c</fullName>
    <description>Preferred start time when the second process post successful first processing Starts. Midnight time is recommended</description>
    <inlineHelpText>Preferred start time when the second process post successful first processing Starts. Midnight time is recommended</inlineHelpText>
    <label>Process2 Start Time</label>
    <type>Time</type>
</CustomField>