oqct-app/main/default/objects/DC_Configuration__c/fields/Process2_Start_Unit__c.field-meta.xml
<CustomField>
    <fullName>Process2_Start_Unit__c</fullName>
    <description>The time unit used for &apos;Process2 Start After&apos; field</description>
    <inlineHelpText>The time unit used for &apos;Process2 Start After&apos; field</inlineHelpText>
    <label>Process2 Start Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Time_Units</valueSetName>
    </valueSet>
</CustomField>