oqct-app/main/default/objects/DC_Configuration__c/fields/Process_Scheduled_Date_Time_Init__c.field-meta.xml
<CustomField>
    <fullName>Process_Scheduled_Date_Time_Init__c</fullName>
    <description>The date-time for which the process (masking/deletion/archival/cloning) is/was scheduled for the first time</description>
    <inlineHelpText>The date-time for which the process (masking/deletion/archival/cloning) is/was scheduled for the first time</inlineHelpText>
    <label>Process Scheduled Date Time (Init)</label>
    <type>DateTime</type>
</CustomField>