oqct-app/main/default/objects/DC_Configuration__c/fields/Process_Scheduled_Date_Time_Next__c.field-meta.xml
<CustomField>
    <fullName>Process_Scheduled_Date_Time_Next__c</fullName>
    <description>The date-time for which the process (masking/deletion/archival/cloning) is scheduled for next repetition</description>
    <inlineHelpText>The date-time for which the process (masking/deletion/archival/cloning) is scheduled for next repetition</inlineHelpText>
    <label>Process Scheduled Date Time (Next)</label>
    <type>DateTime</type>
</CustomField>