oqct-app/main/default/objects/DC_Configuration__c/fields/Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Start_Date__c</fullName>
    <description>The process start date in layman text</description>
    <formula>&apos;After &apos; +  TEXT(Data_Clean_Process_Start_After__c) + &apos; &apos; + TEXT(Data_Clean_Process_Start_Unit__c) + &apos; (at &apos; +  LEFT(TEXT(Data_Clean_Process_Start_Time__c), 5) + &apos;) of Data Clean Record Insertion&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The process start date in layman text</inlineHelpText>
    <label>Process Start Date</label>
    <type>Text</type>
</CustomField>