oqct-app/main/default/objects/DC_Configuration__c/fields/Receive_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Receive_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Receive Email Notifications for process completion</description>
    <inlineHelpText>Receive Email Notifications for process completion</inlineHelpText>
    <label>Receive Email Notification</label>
    <type>Checkbox</type>
</CustomField>