oqct-app/main/default/objects/DC_Configuration__c/fields/Receive_Error_Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Receive_Error_Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, email will be send in case of an error separately</description>
    <inlineHelpText>If true, email will be send in case of an error separately</inlineHelpText>
    <label>Receive Error Email Notification</label>
    <type>Checkbox</type>
</CustomField>