oqct-app/main/default/objects/DC_Configuration__c/fields/Related_Rollback_Status__c.field-meta.xml
<CustomField>
    <fullName>Related_Rollback_Status__c</fullName>
    <description>The rollback status of the related object’s records. This does not include rollback status of the master object’s records</description>
    <formula>IF(
    !OR(
        CONTAINS(TEXT(Data_Clean_Action__c), &apos;Rollback&apos;),
        CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;)
    ),
    &apos;Not Eligible&apos;,
    IF(
        !(Total_Child_Job_Not_Completed_Rollback__c = 0),
        &apos;Pending&apos;,
        IF(
            AND(Total_Related_Success_Rollback__c &gt; 0, Total_Related_Failure_Rollback__c = 0),
            &apos;Success&apos;,
            IF(
                AND(Total_Related_Success_Rollback__c = 0, Total_Related_Failure_Rollback__c &gt; 0),
                &apos;Failed&apos;,
                IF(
                    AND(Total_Related_Success_Rollback__c &gt; 0, Total_Related_Failure_Rollback__c &gt; 0),
                    &apos;Partial Success&apos;,
                    IF(
                        AND(Total_Related_Success_Rollback__c = 0, Total_Related_Failure_Rollback__c = 0),
                        &apos;No Records Found&apos;,
                        null
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The rollback status of the related object’s records. This does not include rollback status of the master object’s records</inlineHelpText>
    <label>Related Rollback Status</label>
    <type>Text</type>
</CustomField>