oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Archive__c.field-meta.xml
<CustomField>
    <fullName>Retry_Archive__c</fullName>
    <description>Retry archival of failed and/or new records</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;),
    null,
    Retry_Process__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retry archival of failed and/or new records</inlineHelpText>
    <label>Retry Archive?</label>
    <type>Checkbox</type>
</CustomField>