oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Archive_After__c.field-meta.xml
<CustomField>
    <fullName>Retry_Archive_After__c</fullName>
    <description>Re-try frequency after span for failed/new pending records archival</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;),
    null,
    Retry_Process_After__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Re-try frequency after span for failed/new pending records archival</inlineHelpText>
    <label>Retry Archive After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>