oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Archive_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Retry_Archive_Frequency__c</fullName>
    <description>Archive Retrial frequency in layman text</description>
    <formula>&apos;Every &apos; + TEXT(Retry_Archive_After__c) + &apos; &apos; + Retry_Archive_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Archive Retrial frequency in layman text</inlineHelpText>
    <label>Retry Archive Frequency</label>
    <type>Text</type>
</CustomField>