oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Archive_Unit__c.field-meta.xml
<CustomField>
    <fullName>Retry_Archive_Unit__c</fullName>
    <description>The unit of time used for ‘Retry Archive After’</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;),
    null,
    TEXT(Retry_Process_Unit__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The unit of time used for ‘Retry Archive After’</inlineHelpText>
    <label>Retry Archive Unit</label>
    <type>Text</type>
</CustomField>