oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Cloning__c.field-meta.xml
<CustomField>
    <fullName>Retry_Cloning__c</fullName>
    <description>Retry Cloning of failed and/or new records</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Cloning&apos;),
    null,
    Retry_Process__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retry Cloning of failed and/or new records</inlineHelpText>
    <label>Retry Cloning?</label>
    <type>Checkbox</type>
</CustomField>