oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Cloning_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Retry_Cloning_Frequency__c</fullName>
    <description>Cloning Retrial frequency in layman text</description>
    <formula>&apos;Every &apos; + TEXT(Retry_Cloning_After__c) + &apos; &apos; + Retry_Cloning_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cloning Retrial frequency in layman text</inlineHelpText>
    <label>Retry Cloning Frequency</label>
    <type>Text</type>
</CustomField>