oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Retry_Deletion__c</fullName>
    <description>Retry Deletion of failed and/or new records</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Deletion&apos;),
    false,
    IF(
        OR(
            ISPICKVAL(Data_Clean_Action__c, &apos;Masking + Deletion&apos;),
            ISPICKVAL(Data_Clean_Action__c, &apos;Masking + Rollback + Deletion&apos;)
        ),
        Retry_Process2__c,
        Retry_Process__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retry Deletion of failed and/or new records</inlineHelpText>
    <label>Retry Deletion?</label>
    <type>Checkbox</type>
</CustomField>