oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Deletion_After__c.field-meta.xml
<CustomField>
    <fullName>Retry_Deletion_After__c</fullName>
    <description>Re-try frequency after span for failed/new pending records deletion</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Deletion&apos;),
    null,
    IF(
        OR(
            ISPICKVAL(Data_Clean_Action__c, &apos;Masking + Deletion&apos;),
            ISPICKVAL(Data_Clean_Action__c, &apos;Masking + Rollback + Deletion&apos;)
        ),
        Retry_Process2_After__c,
        Retry_Process_After__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Re-try frequency after span for failed/new pending records deletion</inlineHelpText>
    <label>Retry Deletion After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>