oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Deletion_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Retry_Deletion_Frequency__c</fullName>
    <description>Deletion Retrial frequency in layman text</description>
    <formula>&apos;Every &apos; + TEXT(Retry_Deletion_After__c) + &apos; &apos; + Retry_Deletion_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deletion Retrial frequency in layman text</inlineHelpText>
    <label>Retry Deletion Frequency</label>
    <type>Text</type>
</CustomField>