oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Deletion_Unit__c.field-meta.xml
<CustomField>
    <fullName>Retry_Deletion_Unit__c</fullName>
    <description>The unit of time used for ‘Retry Deletion After’</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Deletion&apos;),
    null,
    IF(
        OR(
            ISPICKVAL(Data_Clean_Action__c, &apos;Masking + Deletion&apos;),
            ISPICKVAL(Data_Clean_Action__c, &apos;Masking + Rollback + Deletion&apos;)
        ),
        TEXT(Retry_Process2_Unit__c),
        TEXT(Retry_Process_Unit__c)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The unit of time used for ‘Retry Deletion After’</inlineHelpText>
    <label>Retry Deletion Unit</label>
    <type>Text</type>
</CustomField>