oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Masking__c.field-meta.xml
<CustomField>
    <fullName>Retry_Masking__c</fullName>
    <description>Retry Masking of failed and/or new records</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Masking&apos;),
    false,
    Retry_Process__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retry Masking of failed and/or new records</inlineHelpText>
    <label>Retry Masking?</label>
    <type>Checkbox</type>
</CustomField>