oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Masking_After__c.field-meta.xml
<CustomField>
    <fullName>Retry_Masking_After__c</fullName>
    <description>Re-try frequency after span for failed/new pending records masking</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Masking&apos;),
    null,
    Retry_Process_After__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Re-try frequency after span for failed/new pending records masking</inlineHelpText>
    <label>Retry Masking After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>