oqct-app/main/default/objects/DC_Configuration__c/fields/Retry_Masking_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Retry_Masking_Frequency__c</fullName>
    <description>Masking Retrial frequency in layman text</description>
    <formula>&apos;Every &apos; + TEXT(Retry_Masking_After__c) + &apos; &apos; + Retry_Masking_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Masking Retrial frequency in layman text</inlineHelpText>
    <label>Retry Masking Frequency</label>
    <type>Text</type>
</CustomField>